--- a/cinema/src/main/resources/templates/WEB-INF/pages/SeetSelection.html
+++ b/cinema/src/main/resources/templates/WEB-INF/pages/SeetSelection.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+    <table border="1">
 
+        <tr>
+            <th>No</th>
+            <th>Flower Name</th>
+        </tr>
+
+        <!--
+             Local Variable: flower
+             Local Variable: iter (Iterator).
+           -->
+<!--        <p th:text="${name}">Test</p>-->
+        <tr th:each="flower, iter : ${name}">
+            <input type="checkbox" data-pos="${flower.ID}"/>
+
+        </tr>
+
+    </table>
+    <button>
+        her
+    </button>
+
+    <form method="post" action="/SeetSelection">
+        <button type="submit" data-pos="1245    8"></button>
+    </form>
 </body>
 </html>
