--- a/cinema/src/main/resources/static/css/returnTicket.css
+++ b/cinema/src/main/resources/static/css/returnTicket.css
@@ -1,3 +1,8 @@
+body {
+    color: #ebebeb;
+    background-color: #212226;
+}
+
 #headerReturnTicket {
     background-color: #202226 !important;
     text-align: center;
